--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,7 @@
   },
   "options_page": "options.html",
   "manifest_version": 2,
-  "permissions": ["tabs", "activeTab", "http://*/*", "https://*/*"],
+  "permissions": ["tabs", "activeTab", "<all_urls>", "http://*/*", "https://*/*"],
   "web_accessible_resources": [
     "js/page_context.js",
     "style.css"
